--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,11 @@
-/* TODO Add site wide styles */
+/* general site wide styles */
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 1em;
+}
+
+/* main body that is not the header or nav */
+.main-content {
+  margin-top: 100px;
+}
