--- a/client/src/components/HomeFeedCard/homeFeedCard.css
+++ b/client/src/components/HomeFeedCard/homeFeedCard.css
@@ -1,11 +1,12 @@
 .card-container {
-  width: 70vw;
+  width: 60vw;
+  max-width: 500px;
   margin-bottom: 30px;
   justify-content: center;
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.09); 
-  border-radius: 20px;
-  padding: 20px;
-  background-color: #FFE8D6;
+  border-radius: 11px;
+  background-color: #DDBEA9;
+  padding-top: 10px;
 }
 
 .card-headline-item {
@@ -21,6 +22,19 @@
 
 .main-feed-img {
   /* these are the same (both vw) because we want 'responsive' square imgs */ 
-  width: 70vw;
-  height: 70vw;
+  width: 60vw;
+  height: 50vw;
+  max-width: 500px;
+  max-height: 400px;
+}
+
+.card-description {
+  padding: 10px;
+  height: 70px;
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  overflow-y: hidden;
 }
