--- a/client/src/components/CreatePostForm/createPostForm.css
+++ b/client/src/components/CreatePostForm/createPostForm.css
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: column;
   width: 60%;
+  margin-top: 10px;
 }
 
 .upload-form {
@@ -32,8 +33,27 @@
   width: 60vw;
 }
 
-.image-preview {
+.image-preview, .file-drop-zone {
   height: 60vw;
   width: 60vw;
   border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.image-preview {
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.file-drop-zone {
+  background-color: gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 10px rgba(0, 0, 1, 0.3);
+}
+
+.create-submit-btn {
+  border: none;
+  border-radius: 10px;
+  padding: 3px;
 }
