--- a/client/src/components/CreatePostForm/createPostForm.css
+++ b/client/src/components/CreatePostForm/createPostForm.css
@@ -10,12 +10,27 @@
   outline: none;
   border: 1px solid gray;
   margin: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .form-textarea {
   /* scroll on overflow (have a set width and height for textarea) */
   overflow-y: hidden;
   min-height: 100px;
+  width: 100%;
+}
+
+.create-form-select {
+  border-radius: 10px;
+  border: 1px solid gray;
+  outline: none;
+  width: 100%;
+  margin: 5px;
+  padding: 5px;
 }
 
 .create-form-main {
@@ -56,4 +71,6 @@
   border: none;
   border-radius: 10px;
   padding: 3px;
+  margin: 5px;
+  width: 100%;
 }
