--- a/client/src/components/ShowPost/showPost.css
+++ b/client/src/components/ShowPost/showPost.css
@@ -25,6 +25,35 @@
   outline: none;
 }
 
+.post-title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.showPost-menu {
+  position: absolute;
+  top: calc(100% - 29vw);
+  right: calc(100% - 33vw);
+  display: flex;
+  flex-direction: column;
+  background-color: #282828;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.showPost-btn {
+  background-color: #282828;
+  border: none;
+  color: white;
+  padding: 5px;
+}
+
+.showPost-btn:hover {
+  background-color: gray;
+  border-radius: 5px;
+}
+
 .post-container-left {
   width: 35vw;
   height: 100%;
