--- a/client/src/components/HomeFeedCard/homeFeedCard.css
+++ b/client/src/components/HomeFeedCard/homeFeedCard.css
@@ -3,10 +3,11 @@
   max-width: 500px;
   margin-bottom: 30px;
   justify-content: center;
-  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.09); 
-  border-radius: 11px;
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1); 
+  border-radius: 5px;
   background-color: #DDBEA9;
   padding-top: 10px;
+  margin-top: 10px;
 }
 
 .card-headline-item {
