fixed bugs, polished styling

--- a/client/src/components/HomeFeedCard/homeFeedCard.css
+++ b/client/src/components/HomeFeedCard/homeFeedCard.css
@@ -3,11 +3,16 @@
   max-width: 500px;
   margin-bottom: 30px;
   justify-content: center;
-  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.5); 
   border-radius: 5px;
   background-color: #DDBEA9;
   padding-top: 10px;
   margin-top: 10px;
+}
+
+.card-container:hover {
+  filter: brightness(80%);
+  cursor: pointer;
 }
 
 .card-headline-item {
@@ -19,6 +24,10 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 20px;
 }
 
 .main-feed-img {
