--- a/client/src/components/UserPage/userPage.css
+++ b/client/src/components/UserPage/userPage.css
@@ -11,7 +11,8 @@
   margin: 15px;
   list-style: none;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 16px -4px, 
+  rgba(0, 0, 0, 0.75) 0px 4px 8px -3px;
 }
 
 .grid-img {
@@ -20,6 +21,11 @@
   min-width: 100%;
   object-fit: cover;
   vertical-align: bottom;
+}
+
+.grid-img:hover {
+  filter: brightness(80%);
+  cursor: pointer;
 }
 
 .grid-img-title {
