--- a/client/src/components/auth/authForms.css
+++ b/client/src/components/auth/authForms.css
@@ -25,3 +25,11 @@
   border-radius: 10px;
   padding: 3px;
 }
+
+@media screen and (min-width: 900px) {
+  .auth-form-container {
+    width: 30%;
+    top: 30%;
+    left: 35%;
+  }
+}
