--- a/client/src/components/auth/authForms.css
+++ b/client/src/components/auth/authForms.css
@@ -11,7 +11,7 @@
 
 .auth-form-field {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding: 7px;
   padding-bottom: 10px;
   border: 0;
@@ -24,6 +24,17 @@
   width: 100%;
   border-radius: 10px;
   padding: 3px;
+}
+
+.auth-input-err {
+  background: #fff0f4;
+  border-bottom: red 3px solid;
+  outline: none;
+}
+
+.auth-div-error {
+  color: red;
+  margin-bottom: 10px;
 }
 
 @media screen and (min-width: 900px) {
