--- a/client/src/components/auth/authForms.css
+++ b/client/src/components/auth/authForms.css
@@ -2,6 +2,7 @@
   background-color: #f6f7f4;
   width: 50%;
   padding: 40px;
+  padding-bottom: 30px;
   border-radius: 15px;
   position: absolute;
   top: 25%;
@@ -20,10 +21,19 @@
   border-bottom: 3px solid #6B705C;
 }
 
-.auth-form-submit {
-  width: 100%;
+.auth-form-btn {
+  width: 50%;
   border-radius: 10px;
   padding: 3px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  background-color: #A5A58D;
+  margin-top: 15px;
+  border: 2px solid white;
+}
+
+.auth-form-btn:hover {
+  border: 2px solid #A5A58D;
 }
 
 .auth-input-err {
