--- a/client/src/components/UserPage/userPage.css
+++ b/client/src/components/UserPage/userPage.css
@@ -1,8 +1,8 @@
 .grid-img-container {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 10vw;
-  padding-right: 10vw;
+  padding-left: 15vw;
+  padding-right: 15vw;
 }
 
 .grid-img-div {
@@ -30,4 +30,11 @@
 
 .grid-img-title {
   background-color: white;
+}
+
+@media screen and (min-width: 900px) {
+  .grid-img-container {
+    padding-left: 25vw;
+    padding-right: 25vw;
+  }
 }
