--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -3,6 +3,7 @@
   bottom: 0;
   left: 0;
   display: flex;
+  z-index: 1000;
   border-top: 1px solid gray;
   width: 100%;
   justify-content: space-between;
