--- a/client/src/components/SplashPage/splashPage.css
+++ b/client/src/components/SplashPage/splashPage.css
@@ -26,6 +26,13 @@
 }
 
 .hero-container img {
+  width: 100%;
+  height: 90%;
+  filter: brightness(90%);
+  border-radius: 10px;
+}
+
+.hero-img-container {
   width: 50%;
   height: 85%;
   filter: brightness(90%);
@@ -100,8 +107,8 @@
 
 .cat-name {
   position: absolute;
-  left: 31vw;
-  top: calc(25% + 100px);
+  left: 28vw;
+  top: calc(38% + 100px);
   font-size: 32px;
   font-family: sans-serif;
   color: white;
@@ -116,16 +123,24 @@
   font-family: 'Mochiy Pop P One', sans-serif;
 }
 
-.darkened-overlay {
+.darkened-overlay, .darkened-overlay-hero {
   position: relative;
-  top: -102px;
   z-index: 1;
   height: 70px;
   width: 100%;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   background-color: black;
+}
+
+.darkened-overlay {
+  top: -102px;
   opacity: 0.5;
+}
+
+.darkened-overlay-hero {
+  top: -75px;
+  opacity: 0.4;
 }
 
 @media only screen and (min-width: 900px) {
