fixed css img width bug in hero container on splash page

--- a/client/src/components/SplashPage/splashPage.css
+++ b/client/src/components/SplashPage/splashPage.css
@@ -35,6 +35,7 @@
 .hero-img-container {
   width: 50%;
   height: 85%;
+  max-width: 450px;
   filter: brightness(90%);
   border-radius: 10%;
   margin-left: 15px;
@@ -107,11 +108,12 @@
 
 .cat-name {
   position: absolute;
-  left: 28vw;
-  top: calc(38% + 100px);
+  left: 3vw;
+  top: 65%;
   font-size: 32px;
   font-family: sans-serif;
   color: white;
+  z-index: 2;
 }
 
 .posts-header {
@@ -146,14 +148,6 @@
 @media only screen and (min-width: 900px) {
   .hero-container {
     height: 20vw;
-  }
-  .cat-name {
-    top: calc(20% + 150px);
-    left: 33vw;
-  }
-
-  .hero-container img {
-    width: 40%;
   }
 
   .post-prev-img, .post-preview {
