--- a/client/src/components/SplashPage/splashPage.css
+++ b/client/src/components/SplashPage/splashPage.css
@@ -1,186 +1,8 @@
-.splash-main-container {
-  color: white;
-}
-
-.cats-grid-container {
-  width: 100%;
-}
-
 .posts-grid-container {
-  width: 100%;
-  height: 100%;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 20px;
-  gap: 20px;
-}
-
-.hero-container {
-  background-color: #CB997E;
-  height: 35vw;
-  display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
-}
-
-.hero-container img {
-  width: 100%;
-  height: 90%;
-  filter: brightness(90%);
-  border-radius: 10px;
-}
-
-.hero-img-container {
-  width: 50%;
-  height: 85%;
-  max-width: 450px;
-  filter: brightness(90%);
-  border-radius: 10%;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.hero-container img:hover {
-  filter: brightness(70%);
-  cursor: pointer;
-}
-
-.hero-header {
-  background-color: #CB997E;
-  text-align: center;
-  color: black;
-  font-family: 'Mochiy Pop P One', sans-serif;
-  font-size: 28px;
-}
-
-.hero-btn {
-  background-color: #CB997E;
-  border: none;
-  font-size: 20px;
-}
-
-.post-title, .short-post-title {
-  position: relative;
-  font-size: 20px;
-  z-index: 3;
-}
-
-.post-title {
-  bottom: 40px;
-  left: 10px;
-}
-
-.post-preview {
-  height: 300px;
-  margin-bottom: 5px;
-}
-
-.short-post-title {
-  bottom: 40px;
-  left: 10px;
-}
-
-.prev-img {
-  width: 100%;
-  height: 300px;
-  padding: 10px;
-  border-radius: 40px;
-}
-
-.post-prev-img {
-  width: 250px;
-  height: 250px;
-  border-radius: 8px;
-  filter: brightness(90%);
-}
-
-.post-prev-img:hover {
-  filter: brightness(70%);
-  cursor: pointer;
-}
-
-.post-container-img {
-  width: 30vw;
-  height: 30vw;
-}
-
-.cat-name {
-  position: absolute;
-  left: 3vw;
-  top: 65%;
-  font-size: 32px;
-  font-family: sans-serif;
-  color: white;
-  z-index: 2;
-}
-
-.posts-header {
-  margin: 0 auto;
-  width: fit-content;
-  font-size: 28px;
-  margin-top: 16px;
-  color: black;
-  font-family: 'Mochiy Pop P One', sans-serif;
-}
-
-.darkened-overlay, .darkened-overlay-hero {
-  position: relative;
-  z-index: 1;
-  height: 70px;
-  width: 100%;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-  background-color: black;
-}
-
-.darkened-overlay {
-  top: -102px;
-  opacity: 0.5;
-}
-
-.darkened-overlay-hero {
-  top: -75px;
-  opacity: 0.4;
-}
-
-@media only screen and (min-width: 900px) {
-  .hero-container {
-    height: 20vw;
-  }
-
-  .post-prev-img, .post-preview {
-    width: 350px;
-    height: 350px;
-  }
-
-}
-
-.animate-spin {
-  animation: carousel-spin 0.25s linear 1;
-}
-
-.animate-spin-backwards {
-  animation: carousel-spin-backwards 0.25s linear 1;
-}
-
-@keyframes carousel-spin {
-  to {
-    transform: translateX(0px);
-  }
-
-  from {
-    transform: translateX(20px);
-  }
-}
-
-@keyframes carousel-spin-backwards {
-  to {
-    transform: translateX(0px);
-  }
-
-  from {
-    transform: translateX(-20px);
-  }
+  flex-wrap: wrap;
+  width: 100vw;
+  margin-right: 2vw;
 }
