--- a/client/src/components/SplashPage/splashPage.css
+++ b/client/src/components/SplashPage/splashPage.css
@@ -6,3 +6,24 @@
   width: 100vw;
   margin-right: 2vw;
 }
+
+.hero-center {
+  width: 100%;
+  height: 50vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-btn {
+  position: absolute;
+  background-color: #CB997E;
+  position: absolute;
+  padding: 15px;
+  border: none;
+  border-radius: 25px;
+}
+
+.hero-btn:hover {
+  border: 1px solid #CB997E;
+}
