--- a/client/src/components/HomeFeedCard/homeFeedCard.css
+++ b/client/src/components/HomeFeedCard/homeFeedCard.css
@@ -1,19 +1,14 @@
 .card-container {
-  width: 60vw;
-  max-width: 500px;
+  width: 70vw;
+  max-width: 700px;
   margin-bottom: 30px;
   justify-content: center;
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.5); 
   border-radius: 5px;
   background-color: #DDBEA9;
   padding-top: 10px;
-  margin-top: 10px;
+  margin-top: 60px;
   padding-bottom: 10px;
-}
-
-.card-container:hover {
-  filter: brightness(80%);
-  cursor: pointer;
 }
 
 .card-headline-item {
@@ -33,9 +28,9 @@
 
 .main-feed-img {
   /* these are the same (both vw) because we want 'responsive' square imgs */ 
-  width: 60vw;
+  width: 70vw;
   height: 50vw;
-  max-width: 500px;
+  max-width: 700px;
   max-height: 400px;
   object-fit: cover;
 }
@@ -50,4 +45,42 @@
   align-items: flex-start;
   overflow: hidden;
   font-size: 15px;
+}
+
+.content-container {
+  height: 300px;
+  overflow-y: scroll;
+}
+
+.show-comments {
+  padding: 0 10px 0 10px;
+  color: gray;
+  margin-top: 5px;
+}
+
+.border-top {
+  box-shadow: 0px -2px 2px rgba(0, 0, 0, 0.35);
+}
+
+.border-bottom {
+  box-shadow: 0 4px 2px -2px rgba(0,0,0,0.35);
+}
+
+.show-comments:hover {
+  cursor: pointer;
+}
+
+.comment-content {
+  font-weight: 100;
+  font-size: 14px;
+}
+
+.bold-username {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.comment {
+  padding: 15px;
+  border-top: 1px solid gray;
 }
