--- a/client/src/components/HomeFeedCard/homeFeedCard.css
+++ b/client/src/components/HomeFeedCard/homeFeedCard.css
@@ -53,9 +53,8 @@
 }
 
 .show-comments {
-  padding: 0 10px 0 10px;
+  padding: 5px 10px 0 10px;
   color: gray;
-  margin-top: 5px;
 }
 
 .border-top {
