--- a/client/src/components/ShowPost/showPost.css
+++ b/client/src/components/ShowPost/showPost.css
@@ -151,7 +151,16 @@
 
 .create-comment-form {
   width: 100%;
-  height: 60px;
+  height: 50px;
+  box-shadow: 0px -2px 2px rgb(0 0 0 / 35%)
+}
+
+.create-comment-form textarea {
+  height: 100%;
+  outline: none;
+  padding-left: 10px;
+  padding-top: 5px;
+  font-size: 14px;
 }
 
 .create-comment-submit {
