--- a/client/src/components/ChatRoom/chatRoom.css
+++ b/client/src/components/ChatRoom/chatRoom.css
@@ -1,7 +1,60 @@
 .chat-container {
+  display: flex;
+  flex-direction: row;
   padding-top: 65px;
   height: 100vh;
+  width: 100%;
 }
 
-.convo-list-container {
+.chat-container-left {
+  width: 30%;
 }
+
+.chat-container-right {
+  width: 70%;
+}
+
+.convo-block {
+  border-bottom: 1px solid gray;
+  padding: 9px;
+}
+
+.convo-block:hover {
+  cursor: pointer;
+}
+
+input {
+  width: 100%;
+  font-size: 12px;
+  padding:4px;
+}
+
+.search-results {
+  position: absolute;
+  background-color: white;
+  color: black;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: calc(30% + 3px);
+}
+
+/* search result individual css section */
+
+.search-result-row {
+  padding: 5px;
+}
+
+.search-result-row:not(:last-child) {
+  border-bottom: 1px solid lightgray;
+}
+
+.search-result-row:hover {
+  background-color: darkgray;
+}
+
+.search-result-row:last-child:hover {
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+/* end search result individual css section */
