--- a/client/src/components/ChatRoom/chatRoom.css
+++ b/client/src/components/ChatRoom/chatRoom.css
@@ -1,7 +1,7 @@
 .chat-container {
   display: flex;
   flex-direction: row;
-  padding-top: 65px;
+  padding-top: 46px;
   height: 100vh;
   width: 100%;
 }
@@ -12,6 +12,24 @@
 
 .chat-container-right {
   width: 70%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #DDBEA9;
+  padding: 0px 10px 10px 10px;
+}
+
+.container-box {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-height: 100%;
+  overflow-y: auto;
+}
+
+.container-box > :first-child {
+  margin-top: auto !important;
 }
 
 .convo-block {
@@ -38,7 +56,8 @@ input {
   width: calc(30% + 3px);
 }
 
-/* search result individual css section */
+
+/* === search result individual css section === */
 
 .search-result-row {
   padding: 5px;
@@ -57,4 +76,24 @@ input {
   border-bottom-left-radius: 10px;
 }
 
-/* end search result individual css section */
+
+/* === individual messages section === */
+
+.owned-msg, .unowned-msg {
+  width: 40%;
+  height: fit-content;
+  margin: 0px 5px 10px 5px;
+  padding: 15px;
+  border-radius: 15px;
+}
+
+/* we want all msgs sent by current user to be on the left */
+.owned-msg {
+  background-color: #A5A58D;
+}
+
+/* we want all msgs sent by current user to be on the right */
+.unowned-msg {
+  background-color: #CB997E;
+  align-self: flex-end;
+}
