--- a/client/src/components/auth/authForms.css
+++ b/client/src/components/auth/authForms.css
@@ -2,12 +2,17 @@
   background-color: #f6f7f4;
   width: 50%;
   padding: 40px;
-  padding-bottom: 30px;
+  padding-bottom: 25px;
+  padding-top: 30px;
   border-radius: 15px;
   position: absolute;
   top: 25%;
   left: 25%;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.form-container {
+  height: 100vh;
 }
 
 .auth-form-field {
@@ -28,7 +33,7 @@
   padding-bottom: 5px;
   padding-top: 5px;
   background-color: #A5A58D;
-  margin-top: 15px;
+  margin-top: 10px;
   border: 2px solid white;
 }
 
