--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,13 +8,14 @@
 }
 
 html {
-  height: 100vh;
   width: calc(100vw - 12px);
   background-color: #B7B7A4;
 }
 
 body {
   width: 100%;
+  height: 100vh;
+  min-height: 100vh;
 }
 
 #root {
