--- a/client/src/components/ChatRoom/chatRoom.css
+++ b/client/src/components/ChatRoom/chatRoom.css
@@ -41,23 +41,61 @@
   cursor: pointer;
 }
 
-input {
+.msgs-msg {
+  color: gray;
+  opacity: 0.8;
+  margin: 10px 5px 10px;
+  font-size: 18px;
+}
+
+form {
+  display: flex;
+}
+
+.chat-container-left input {
   width: 100%;
   font-size: 12px;
-  padding:4px;
+  padding: 8px 8px 8px 3px;
+  height: 36px;
 }
+
+.chat-container-right input {
+  width: 85%;
+  font-size: 12px;
+  padding: 8px;
+  padding-left: 12px;
+  margin-right: 5px;
+  outline: none;
+  border: none;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.chat-container-right form button {
+  background-color: #A5A58D;
+  border: none;
+  outline: none;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  width: 15%;
+}
+
+form button:hover {
+  outline: 2px solid #A5A58D;
+}
+
+
+/* === search result section === */
 
 .search-results {
   position: absolute;
   background-color: white;
   color: black;
+  margin-top: 36px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  width: calc(30% + 3px);
+  width: 30%;
 }
-
-
-/* === search result individual css section === */
 
 .search-result-row {
   padding: 5px;
