--- a/client/src/components/ChatRoom/chatRoom.css
+++ b/client/src/components/ChatRoom/chatRoom.css
@@ -48,8 +48,9 @@
   font-size: 18px;
 }
 
-form {
+.chat-container-right form {
   display: flex;
+  padding-bottom: 5px;
 }
 
 .chat-container-left input {
@@ -91,7 +92,6 @@ form button:hover {
   position: absolute;
   background-color: white;
   color: black;
-  margin-top: 36px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   width: 30%;
