refactored a lot of the splash page / nav components

--- a/client/src/components/NavBar/navBar.css
+++ b/client/src/components/NavBar/navBar.css
@@ -5,11 +5,12 @@ nav {
 
 ul {
   list-style-type: none;
+  color: #fefefe;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: #fefefe;
 }
 
 .main-navbar {
