--- a/client/src/components/HomeFeedCard/homeFeedCard.css
+++ b/client/src/components/HomeFeedCard/homeFeedCard.css
@@ -11,6 +11,11 @@
   padding-bottom: 10px;
 }
 
+.card-container a {
+  color: black;
+  text-decoration: none;
+}
+
 .card-headline-item {
   display: inline-block;
   padding: 5px;
