--- a/client/src/components/SplashPage/splashPage.css
+++ b/client/src/components/SplashPage/splashPage.css
@@ -10,7 +10,7 @@
 
 .hero-center {
   width: 100%;
-  height: 50vw;
+  height: 60vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,11 +21,35 @@
 }
 
 .hero-btn {
-  background-color: #CB997E;
+  /* background-color: #CB997E; */
+  background-color: rgba(100, 100, 100, 0);
   position: absolute;
-  padding: 15px;
+  padding: 12px;
   border: none;
-  border-radius: 25px;
+  border: 1.5px gray solid;
+  font-size: 20px;
+  color: white;
+  margin-top: 10px;
+}
+
+.hero-div {
+  color: white;
+  font-size: 4vw;
+  font-weight: 700;
+  font-family: 'Mochiy Pop P One', sans-serif;
+  opacity: 0.9;
+}
+
+.hero-div-header {
+  color: #ffba78;
+  font-weight: 700;
+  opacity: 1;
+  font-size: 22px;
+}
+
+.hero-div-container {
+  margin-right: 35vw;
+  margin-bottom: 8vw;
 }
 
 .hero-btn:hover {
@@ -46,7 +70,7 @@
   flex-wrap: wrap;
   width: 100vw;
   justify-content: center;
-  padding-top: 55vw;
+  padding-top: 65vw;
 }
 
 .single-cat-container {
@@ -73,7 +97,7 @@
   }
 
   .category-grid-container {
-    padding-top: 51vw;
+    padding-top: 61vw;
   }
 } 
 
