--- a/client/src/components/ChatRoom/chatRoom.css
+++ b/client/src/components/ChatRoom/chatRoom.css
@@ -1,7 +1,7 @@
 .chat-container {
   display: flex;
   flex-direction: row;
-  padding-top: 46px;
+  padding-top: 56px;
   height: 100vh;
   width: 100%;
 }
@@ -59,34 +59,35 @@
 
 .chat-container-left input {
   width: 100%;
-  font-size: 12px;
-  padding: 8px 8px 8px 3px;
-  height: 36px;
+  font-size: 14px;
+  padding: 12px 10px 12px 3px;
+  height: 42px;
 }
 
 .chat-container-right input {
-  width: 85%;
-  font-size: 12px;
-  padding: 8px;
-  padding-left: 12px;
+  width: 88%;
+  font-size: 16px;
+  padding: 14px;
+  padding-left: 20px;
   margin-right: 5px;
   outline: none;
   border: none;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  border-top-left-radius: 44px;
+  border-bottom-left-radius: 44px;
 }
 
 .chat-container-right form button {
-  background-color: #A5A58D;
+  background-color: rgb(107,112,92);
   border: none;
   outline: none;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  width: 15%;
+  border-top-right-radius: 44px;
+  border-bottom-right-radius: 44px;
+  width: 12%;
+  padding-right: 5px;
 }
 
 form button:hover {
-  outline: 2px solid #A5A58D;
+  outline: 2px solid rgb(107,112,92);
 }
 
 
@@ -122,9 +123,9 @@ form button:hover {
 /* === individual messages section === */
 
 .owned-msg, .unowned-msg {
-  width: 40%;
+  width: 45%;
   height: fit-content;
-  margin: 0px 5px 10px 5px;
+  margin: 0px 10px 20px 5px;
   padding: 15px;
   border-radius: 15px;
 }
