fixed css for the side of the body (inner div was still at 100vw)

--- a/client/src/components/SplashPage/splashPage.css
+++ b/client/src/components/SplashPage/splashPage.css
@@ -68,7 +68,7 @@
 .category-grid-container {
   display: flex;
   flex-wrap: wrap;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   padding-top: 65vw;
 }
