--- a/client/src/components/HomeFeedCard/homeFeedCard.css
+++ b/client/src/components/HomeFeedCard/homeFeedCard.css
@@ -7,8 +7,12 @@
   border-radius: 5px;
   background-color: #DDBEA9;
   padding-top: 10px;
-  margin-top: 60px;
+  margin-top: 25px;
   padding-bottom: 10px;
+}
+
+.card-container:first-child {
+  margin-top: 75px;
 }
 
 .card-container a {
@@ -32,12 +36,12 @@
 }
 
 .main-feed-img {
-  /* these are the same (both vw) because we want 'responsive' square imgs */ 
   width: 70vw;
-  height: 50vw;
+  height: 60vw;
   max-width: 700px;
-  max-height: 400px;
-  object-fit: cover;
+  max-height: 500px;
+  object-fit: contain;
+  background-color: #282828;
 }
 
 .card-description {
